n8n/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  # Only run one, we're not concerned with availability here.
  replicas: 1
  revisionHistoryLimit: 3
  # During deployments, don't start another before the first is terminated.
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
      - name: redis
        image: redis:7.4.0 # https://hub.docker.com/_/redis/tags
        ports:
        - name: redis
          containerPort: 6379
