n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  # Only run one, we're not concerned with availability here.
  replicas: 1
  revisionHistoryLimit: 3
  # During deployments, don't start another before the first is terminated.
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      nodeName: crobasaurusrex # We have more storage available on this node but a slower GPU.
      containers:
      - name: n8n
        image: n8nio/n8n:1.84.3 # https://hub.docker.com/r/n8nio/n8n/tags
        ports:
        - name: n8n
          containerPort: 5678
        volumeMounts:
        - name: n8n-storage
          # N8n stores data in it's home directory
          mountPath: /home/node/.n8n
        - name: n8n-shared
          mountPath: /data/shared
      # N8n requires the volume be owned by uid 1000 (node)
      securityContext:
        fsGroup: 1000
      volumes:
      - name: n8n-storage
        hostPath:
          path: /stash/n8n/storage
          type: DirectoryOrCreate # if the directory does not exist then create it
      - name: n8n-shared
        hostPath:
          path: /stash/n8n/shared
          type: DirectoryOrCreate # if the directory does not exist then create it
