n8n/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: redis
  name: redis
  namespace: n8n
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
  sessionAffinity: None
  type: ClusterIP
