n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: n8n
  name: n8n
  namespace: n8n
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: n8n
      port: 5678
      protocol: TCP
      targetPort: n8n
  selector:
    app.kubernetes.io/name: n8n
  sessionAffinity: None
  type: ClusterIP
